# so-analyzer-android

./: .gitignore  ANALYZER_PIPELINE.md  ARCHITECTURE.md  AnalyzerActivity.kt  AndroidManifest.xml  BUILD_GUIDE.md  CMakeLists.txt  ELFParser.kt  FileSystemManager.kt  GET_APK.md  GITHUB_ACTIONS_SETUP.md  INSTALLATION.md  MainActivity.kt  NativeDisassembler.kt  PERMISSIONS.md  QUICK_START.md  R.kt  README.md  activity_analyzer.xml  activity_main.xml  build-apk.yml  build.bat  build.gradle  build.sh  colors.xml  disassembler.cpp  gradle.properties  item_background.xml  item_code.xml  item_file.xml  item_section.xml  item_string.xml  item_symbol.xml  proguard-rules.pro  settings.gradle  strings.xml  test.yml  themes.xml
.github/workflows/: android-build.yml
.github/workflows/.github/: android-build.yml
